--- a/qc-summary.Rmd
+++ b/qc-summary.Rmd
@@ -28,15 +28,15 @@ check_install = function(packages) {
 
 ```{r load-libraries, echo=FALSE}
 packages = c("ggplot2", "reshape", "gplots", "edgeR", "CHBUtils", "pheatmap",
-              "DESeq2", "tximport", "DT", "DEGreport", "dplyr")
+              "DESeq2", "tximport", "DT", "DEGreport", "dplyr","vsn","magrittr","topGO")
 check_install(packages)
 installed = lapply(packages, library, character.only = TRUE)
 ```
 
 ```{r qc-setup}
-project_summary = "/data28/users/luze/bcbio-nextgen/HNC47_analysis/work/project-summary.csv"
-counts_file = "/data28/users/luze/bcbio-nextgen/HNC47_analysis/work/combined.counts"
-tx2genes_file = "/data28/users/luze/bcbio-nextgen/HNC47_analysis/work/tx2gene.csv"
+project_summary = "../project-summary.csv"
+counts_file = "../combined.counts"
+tx2genes_file = "../tx2gene.csv"
 cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442",
 "#0072B2", "#D55E00", "#CC79A7")
 summarydata = read.table(project_summary, header=TRUE, sep=",")
@@ -71,7 +71,7 @@ if (file.exists(tx2genes_file)) {
   names(sf_files) = rownames(summarydata)
   tx2gene = read.table(tx2genes_file, sep=",", row.names=NULL, header=FALSE)
   txi.salmon = tximport(sf_files, type="salmon", tx2gene=tx2gene,
-                        reader=readr::read_tsv, countsFromAbundance="lengthScaledTPM")
+                        countsFromAbundance="lengthScaledTPM") ##, dropInfReps=TRUE) ## a modification here
   counts = round(data.frame(txi.salmon$counts, check.names=FALSE))
 } else {
   counts = read.table(counts_file, header=TRUE, row.names="id", check.names=FALSE)
@@ -120,7 +120,7 @@ get_heatmap_fn = function(summarydata) {
     else {
     # rownames(metadata) = summarydata$Name
     heatmap_fn = function(data, ...) {
-        pheatmap(data, annotation=metadata, clustering_method = "ward.D2",
+        pheatmap(data, annotation=metadata[,c('N_concentration','Timepoint')], clustering_method = "ward.D2",
         clustering_distance_cols = "correlation", ...)
     }
     return(heatmap_fn)
@@ -239,7 +239,7 @@ ggplot(summarydata, aes(x=Name, y=X5.3.bias)) +
     ylab("5'->3' bias") + xlab("")
 ```
 
-## Boxplot of log10 counts per gene
+## Boxplot of log counts per gene
 ```{r boxplot-raw}
 melted = melt(counts)
 colnames(melted) = c("sample", "count")
@@ -252,7 +252,7 @@ ggplot(melted, aes(x=sample, y=count)) + geom_boxplot() +
           axis.text.x = element_text(angle=90)) + xlab("")
 ```
 
-## Boxplot of log10 TMM-normalized counts per gene
+## Boxplot of log TMM-normalized counts per gene
 Trimmed mean of M-values (TMM) normalization is described
 [here](http://genomebiology.biomedcentral.com/articles/10.1186/gb-2010-11-3-r25)
 
@@ -273,7 +273,7 @@ ggplot(melted, aes(x=sample, y=count)) + geom_boxplot() +
           axis.text.x = element_text(angle=90)) + xlab("")
 ```
 
-## Density of log10 TMM-normalized counts
+## Density of log TMM-normalized counts
 ```{r density-normalized}
 ggplot(melted, aes(x=count, group=sample)) +
     geom_density() +
@@ -294,64 +294,78 @@ heatmap_fn(cor(normalized_counts, method="pearson"))
 heatmap_fn(cor(normalized_counts, method="spearman"))
 ```
 
-## PCA plots {.tabset}
+## PCA plots using the rlog-transformed values {.tabset}
 ```{r pca, eval=ncol(counts) > 1}
-dds = DESeqDataSetFromMatrix(countData=counts, colData=summarydata, design=~Name)
-vst = varianceStabilizingTransformation(dds)
-pca_loadings = function(object, ntop=500) {
-  rv <- matrixStats::rowVars(assay(object))
-  select <- order(rv, decreasing = TRUE)[seq_len(min(ntop,
-      length(rv)))]
-  pca <- prcomp(t(assay(object)[select, ]))
-  percentVar <- pca$sdev^2/sum(pca$sdev^2)
-  names(percentVar) = colnames(pca$x)
-  pca$percentVar = percentVar
-  return(pca)}
-pc = pca_loadings(vst)
-comps = data.frame(pc$x)
-comps$Name = rownames(comps)
-library(dplyr)
-comps = comps %>% left_join(summarydata, by=c("Name"="Name"))
-colorby = "Name"
+#dds = DESeqDataSetFromMatrix(countData=counts, colData=summarydata, design=~Name)
+#vst = varianceStabilizingTransformation(dds)
+#pca_loadings = function(object, ntop=500) {
+#  rv <- matrixStats::rowVars(assay(object))
+#  select <- order(rv, decreasing = TRUE)[seq_len(min(ntop,
+#      length(rv)))]
+#  pca <- prcomp(t(assay(object)[select, ]))
+#  percentVar <- pca$sdev^2/sum(pca$sdev^2)
+#  names(percentVar) = colnames(pca$x)
+#  pca$percentVar = percentVar
+#  return(pca)}
+#pc = pca_loadings(rld)
+#comps = data.frame(pc$x)
+#comps$Name = rownames(comps)
+#library(dplyr)
+#comps = comps %>% left_join(summarydata, by=c("Name"="Name"))
+#colorby = "Name"
+
+dds = DESeqDataSetFromMatrix(countData=counts, colData=summarydata, design=~Timepoint + N_concentration)
+rld = rlog(dds,blind=FALSE)
+pcaData <- plotPCA(rld,intgroup = c("N_concentration","Timepoint"), returnData=TRUE)
+percentVar <- round(100 * attr(pcaData, "percentVar"))
 ```
 
 ```{r pca-plotter}
-pca_plot = function(comps, nc1, nc2, colorby) {
-   c1str = paste0("PC", nc1)
-   c2str = paste0("PC", nc2)
-  ggplot(comps, aes_string(c1str, c2str, color=colorby)) +
-    geom_point() + theme_bw() +
-    xlab(paste0(c1str, ": ", round(pc$percentVar[nc1] * 100), "% variance")) +
-    ylab(paste0(c2str, ": ", round(pc$percentVar[nc2] * 100), "% variance"))
-  }
+#pca_plot = function(comps, nc1, nc2, colorby) {
+#   c1str = paste0("PC", nc1)
+#   c2str = paste0("PC", nc2)
+#  ggplot(comps, aes_string(c1str, c2str, color=colorby)) +
+#    geom_point() + theme_bw() +
+#    xlab(paste0(c1str, ": ", round(pc$percentVar[nc1] * 100), "% variance")) +
+#    ylab(paste0(c2str, ": ", round(pc$percentVar[nc2] * 100), "% variance"))
+#  }
 ```
 
 ### PC1 vs. PC2
 ```{r PC1-PC2}
-pca_plot(comps, 1, 2, colorby)
+#pca_plot(comps, 1, 2, colorby)
+
+ggplot(pcaData, aes(PC1, PC2, color=N_concentration, shape=Timepoint)) +
+  geom_point(size=3) + scale_shape_manual(values=seq(0,7)) + 
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) + 
+  coord_fixed()
+  
 ```
 
 ### PC3 vs. PC4
 ```{r PC3-PC4}
-pca_plot(comps, 3, 4, colorby)
+# pca_plot(comps, 3, 4, colorby)
+
 ```
 
 ### PC5 vs. PC6
 ```{r PC5-PC6}
-pca_plot(comps, 5, 6, colorby)
+#pca_plot(comps, 5, 6, colorby)
+  
 ```
 
 ### Variance explained by component
 ```{r component-loadings}
-ggplot(data.frame(component=reorder(names(pc$percentVar), -pc$percentVar),
-                  percent_var=pc$percentVar),
-       aes(component, percent_var)) + geom_bar(stat='identity') +
-  ylab("percent of total variation") + xlab("") + theme_bw()
+#ggplot(data.frame(component=reorder(names(pc$percentVar), -pc$percentVar),
+#                  percent_var=pc$percentVar),
+#       aes(component, percent_var)) + geom_bar(stat='identity') +
+#  ylab("percent of total variation") + xlab("") + theme_bw()
 ```
 
 ```{r shiny-app, echo=F}
 # this is to plot data with https://github.com/lpantano/shiny/tree/master/expression
-degObj(assay(vst), metadata, "deg.rda")
+degObj(assay(rld), metadata, "deg.rda")
 ``````{r deseq2-tximport-helper-functions}
 # snagged from development version of DESeq
 DESeqDataSetFromTximport <- function(txi, colData, design, ...)
@@ -382,8 +396,8 @@ subset_tximport = function(txi, rows, columns) {
 ```{r de-setup}
 library(DEGreport)
 library(vsn)
-design = ~batch+panel
-condition = "panel"
+design = ~Timepoint + N_concentration
+condition = "N_concentration"
 ```
 
 # Differential expression
@@ -397,9 +411,15 @@ if(exists("txi.salmon")) {
   dds = DESeqDataSetFromMatrix(countData=counts,
       colData=summarydata, design = design  )
 }
-geoMeans = apply(counts, 1, function(row) if (all(row == 0)) 0 else
-                 exp(mean(log(row[row != 0]))))
-dds = estimateSizeFactors(dds, geoMeans=geoMeans)
+
+## set the Low ammonium to be the reference level
+library("magrittr")
+dds$N_concentration %<>% relevel("Low")
+dds$Timepoint %<>% relevel("B2")
+
+#geoMeans = apply(counts, 1, function(row) if (all(row == 0)) 0 else
+#                 exp(mean(log(row[row != 0]))))
+#dds = estimateSizeFactors(dds, geoMeans=geoMeans)
 dds = DESeq(dds)
 ```
 
@@ -426,7 +446,9 @@ plotDispEsts(dds)
 
 ```{r deseq2-handler}
 handle_deseq2 = function(dds, summarydata, column) {
-  all_combs = combn(levels(summarydata[,column]), 2, simplify=FALSE)
+  lv = levels(factor(summarydata[,column]))
+  if(column == 'Timepoint') lv = c("I12","I10","I2","BI","FB8","FB6","B4","B2")
+  all_combs = combn(lv, 2, simplify=FALSE)
   all_results = list()
   contrast_strings = list()
   for(comb in all_combs) {
@@ -440,6 +462,33 @@ handle_deseq2 = function(dds, summarydata, column) {
   names(all_results) = contrast_strings
   return(all_results)
 }
+```
+
+```{r gene-annotations}
+gene_anno = read.table("HNC47_gene_annotations.txt",header=TRUE,sep="\t",quote="")
+gene_anno = gene_anno[gene_anno[,2] != "",]
+rownames(gene_anno) = gene_anno[,2]
+```
+
+```{r GOanno}
+library(topGO)
+geneID2GO <- readMappings(file="GO/HNC47.GO.txt")
+topDiffGenes <- function(allScore) { 
+	top <- allScore < 0.01
+	top[is.na(top)] <- FALSE
+	return(top)
+}
+GO_ID <- c()
+for(i in 1:nrow(gene_anno)){
+	geneID <- rownames(gene_anno)[i]
+	if(any(names(geneID2GO) == geneID)){ 
+		loc <- which(names(geneID2GO) == geneID)
+		GO_ID <- c(GO_ID,paste(geneID2GO[[loc]],collapse=", ")) 
+	}
+	else{ GO_ID <- c(GO_ID,"")}
+}
+gene_anno$GO <- GO_ID
+
 ```
 
 ## MA-plots
@@ -534,10 +583,372 @@ for(i in seq(length(all_results))) {
   out_df = as.data.frame(all_results[[i]])
   out_df$id = rownames(out_df)
   out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
   write.table(out_df, file=paste(names(all_results)[i], ".tsv", sep=""),
                          quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
   sig_genes = subset(out_df, padj < 0.05)
   DT::datatable(sig_genes)
   cat("\n")
+  
+  geneList <- out_df[,8]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data",names(all_results[i])),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 50, numChar=100)
+    write.table(allRes, file=paste(names(all_results)[i], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+  
 }
+
+```
+
+```{r DESeq-tables for timepoints}
+all_results2 = handle_deseq2(dds, summarydata, "Timepoint")
+
+for(i in seq(length(all_results2))) {
+  cat(paste("Lowest adjusted p-value hits for", names(all_results2)[i]))
+  out_df = as.data.frame(all_results2[[i]])
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  write.table(out_df, file=paste(names(all_results2)[i], ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  sig_genes = subset(out_df, padj < 0.05)
+  DT::datatable(sig_genes)
+  cat("\n")
+  
+  geneList <- out_df[,8]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data",names(all_results2[i])),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste(names(all_results2)[i], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+}
+```
+
+
+## Gene clustering using top 20 differential expression genes
+```{r DEGreport-clustering}
+res = res[order(res$padj),]
+topGenes <- rownames(res[1:20,])
+mat <- assay(rld)[topGenes,]
+#mat <- normalized_counts[topGenes,]
+anno <- as.data.frame(colData(rld)[,c("N_concentration","Timepoint")])
+pheatmap(mat,annotation_col=anno)
+```
+## PCA plot using top 20 differential expression genes
+```{r DEGreport-PCA}
+pcaData <- plotPCA(rld[topGenes,],intgroup = c("N_concentration","Timepoint"), returnData=TRUE)
+percentVar <- round(100 * attr(pcaData, "percentVar"))
+
+ggplot(pcaData, aes(PC1, PC2, color=N_concentration, shape=Timepoint)) +
+  geom_point(size=3) + scale_shape_manual(values=seq(0,7)) + 
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) + 
+  coord_fixed()
+```
+
+## Counts plot to visualize the counts for a specific operon psp {.tabset}
+### pspA
+```{r pspA}
+geneCounts1 <- plotCounts(dds,gene="HNC47_01302",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts1, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### pspB
+```{r pspB}
+geneCounts2 <- plotCounts(dds,gene="HNC47_01303",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts2, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### pspC
+```{r pspC}
+geneCounts3 <- plotCounts(dds,gene="HNC47_01304",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts3, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### pspD
+```{r pspD}
+geneCounts4 <- plotCounts(dds,gene="HNC47_01305",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts4, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### pspG
+```{r pspG}
+geneCounts5 <- plotCounts(dds,gene="HNC47_04039",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts5, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### pspABCDG
+```{r pspABCDG}
+genesCounts <- rbind(geneCounts1,geneCounts2,geneCounts3,geneCounts4,geneCounts5)
+genesCounts$gene <- c(rep("pspA",16),rep("pspB",16),rep("pspC",16),rep("pspD",16),rep("pspG",16))
+times <- c("B2","B4","FB6","FB8","BI","I2","I10","I12")
+genesCounts$Timepoint <- factor(genesCounts$Timepoint,levels=times,ordered=TRUE)
+genesCounts <- genesCounts[order(genesCounts[,2]),]
+ggplot(genesCounts, aes(x = Timepoint, y = count, color = gene, shape = N_concentration, group = gene)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+## Counts plot to visualize the counts for a specific gene {.tabset}
+### mqo
+```{r mqo}
+geneCounts <- plotCounts(dds,gene="HNC47_02157",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### metA
+```{r metA}
+geneCounts <- plotCounts(dds,gene="HNC47_03997",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### metB
+```{r metB}
+geneCounts <- plotCounts(dds,gene="HNC47_03917",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### metC
+```{r metC}
+geneCounts <- plotCounts(dds,gene="HNC47_02914",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+### metE
+```{r metE}
+geneCounts <- plotCounts(dds,gene="HNC47_03785",intgroup=c("Timepoint", "N_concentration"),returnData=TRUE)
+ggplot(geneCounts, aes(x = Timepoint, y = count, color = N_concentration, group = N_concentration)) + geom_point() + geom_smooth(se = FALSE, method = "loess") + scale_y_log10()
+
+```
+
+## Time course analysis
+```{r time-course analysis}
+ddsTc <- dds
+design(ddsTc) <- ~ N_concentration + Timepoint + N_concentration:Timepoint
+# likelihood ratio test, to identify genes with small p values
+# These genes are whose which at one or more timepoints
+# after reference timepoint showed a strain-specific effect
+ddsTc <- DESeq(ddsTc,test="LRT",reduced = ~ N_concentration + Timepoint)
+resTc <- results(ddsTc,name="N_concentrationHigh.TimepointI12")
+ferm <- plotCounts(ddsTc,which.min(resTc$padj), intgroup = c("Timepoint","N_concentration"), returnData = TRUE)
+ggplot(ferm,aes(x=Timepoint,y=count,color=N_concentration,group=N_concentration)) + geom_point() + geom_smooth(se=FALSE,method="loess") + scale_y_log10()
+
+```
+
+## Save time course analysis results
+```{r SaveResults}
+names <- resultsNames(ddsTc)
+names <- names[-c(1,2)]
+
+# the time-course effect under Low N condition (the main effect)
+# as well as culture condition effect *different* across time-course
+for(i in names){
+  resTc_tmp <- results(ddsTc,name=i)
+  out_df = as.data.frame(resTc_tmp)
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  out_df <- out_df[order(out_df$log2FoldChange,decreasing=TRUE),]
+  write.table(out_df, file=paste(i, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+						 
+  geneList <- out_df[,7]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data",i),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste(i, "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+} 
+
+# the time-course effect under High N condition
+# this is, by definition, the main effect *plus* the interaction term
+# (the extra time-course effect in High N compared to Low N)
+num = length(levels(factor(summarydata[,"Timepoint"])))
+for(i in length(names)/2){
+  resTc_tmp <- results(ddsTc, list( c(names[i],names[i+num-1]) )) # Timepoint_B4_vs_B2, N_concentrationHigh.TimepointB4
+  out_df = as.data.frame(resTc_tmp)
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  out_df <- out_df[order(out_df$log2FoldChange,decreasing=TRUE),]
+  write.table(out_df, file=paste(names[i],"-",names[i+num-1], ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  geneList <- out_df[,7]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data time-course under High N"),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste(names[i],"-",names[i+num-1], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+}
+
+```
+
+## Differential expression analysis under batch, fed-batch and induction for High VS Low N concentrations
+```{r DEG-phase}
+batch = c("V4B4_L1","V4B6_L1","V6B2_L1","V6B4_L1")
+fedbatch = c("V4BI_L1","V4FB6_L1","V4FB8_L1","V6BI_L1","V6FB6_L1","V6FB8_L1")
+induction = c("V4I10_L1","V4I12_L1","V4I2_L1","V6I10_L1","V6I12_L1","V6I2_L1")
+
+## batch analysis
+dds_batch <- dds[,batch]
+dds_batch$Timepoint <- droplevels(dds_batch$Timepoint)
+dds_batch <- DESeq(dds_batch)
+batch_results = handle_deseq2(dds_batch, summarydata, condition)
+
+for(i in seq(length(batch_results))) {
+  cat(paste("Lowest adjusted p-value hits for", names(batch_results)[i]))
+  out_df = as.data.frame(batch_results[[i]])
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  write.table(out_df, file=paste("batch_",names(batch_results)[i], ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  sig_genes = subset(out_df, padj < 0.05)
+  DT::datatable(sig_genes)
+  cat("\n")
+  
+  geneList <- out_df[,8]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data batch"),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste("batch_",names(batch_results)[i], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+}
+
+## fedbatch analysis
+dds_fedbatch <- dds[,fedbatch]
+dds_fedbatch$Timepoint <- droplevels(dds_fedbatch$Timepoint)
+dds_fedbatch <- DESeq(dds_fedbatch)
+fedbatch_results = handle_deseq2(dds_fedbatch, summarydata, condition)
+
+for(i in seq(length(fedbatch_results))) {
+  cat(paste("Lowest adjusted p-value hits for", names(fedbatch_results)[i]))
+  out_df = as.data.frame(fedbatch_results[[i]])
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  write.table(out_df, file=paste("fedbatch_",names(fedbatch_results)[i], ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  sig_genes = subset(out_df, padj < 0.05)
+  DT::datatable(sig_genes)
+  cat("\n")
+  
+  geneList <- out_df[,8]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data fedbatch"),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste("fedbatch_",names(batch_results)[i], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+}
+
+## batch+fedbatch analysis
+
+dds_BI <- dds[,c(batch,fedbatch)]
+dds_BI$Timepoint <- droplevels(dds_BI$Timepoint)
+dds_BI <- DESeq(dds_BI)
+BI_results = handle_deseq2(dds_BI, summarydata, condition)
+
+for(i in seq(length(BI_results))) {
+  cat(paste("Lowest adjusted p-value hits for", names(BI_results)[i]))
+  out_df = as.data.frame(BI_results[[i]])
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  write.table(out_df, file=paste("BI_",names(BI_results)[i], ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  sig_genes = subset(out_df, padj < 0.05)
+  DT::datatable(sig_genes)
+  cat("\n")
+  
+  geneList <- out_df[,8]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data BI"),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste("BI",names(batch_results)[i], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+}
+
+## induction analysis
+dds_induction <- dds[,induction]
+dds_induction$Timepoint <- droplevels(dds_induction$Timepoint)
+dds_induction <- DESeq(dds_induction)
+induction_results = handle_deseq2(dds_induction, summarydata, condition)
+
+for(i in seq(length(induction_results))) {
+  cat(paste("Lowest adjusted p-value hits for", names(induction_results)[i]))
+  out_df = as.data.frame(induction_results[[i]])
+  out_df$id = rownames(out_df)
+  out_df = out_df[, c("id", colnames(out_df)[colnames(out_df) != "id"])]
+  out_df$GeneName = gene_anno[out_df$id,1]
+  out_df$Product = gene_anno[out_df$id,7]
+  out_df$GO = gene_anno[out_df$id,9]
+  write.table(out_df, file=paste("induction_",names(induction_results)[i], ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  sig_genes = subset(out_df, padj < 0.05)
+  DT::datatable(sig_genes)
+  cat("\n")
+  
+  geneList <- out_df[,8]
+  names(geneList) <- rownames(out_df)
+  for(j in c('BP','MF','CC')){
+	GOdata <- new("topGOdata",description=paste("GO analysis of data induction"),ontology=j,allGenes=geneList, geneSel=topDiffGenes, nodeSize=5, annot=annFUN.gene2GO, gene2GO=geneID2GO)
+    #resultKS <- runTest(GOdata, algorithm = "classic", statistic = "ks")
+    resultFisher <- runTest(GOdata, algorithm = "classic", statistic = "fisher")
+    allRes <- GenTable(GOdata, classicFisher = resultFisher, orderBy = "classicFisher", ranksOf = "classicFisher", topNodes = 30, numChar=100)
+    write.table(allRes, file=paste("induction",names(batch_results)[i], "_enrichedGO of ", j, ".tsv", sep=""),
+                         quote=FALSE, sep="\t", row.names=FALSE, col.names=TRUE)
+  }
+}
+
 ```
